# cours_infrastructure_devops

./: AUDIT.MD  README.md  conflit.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .flake8  pyproject.toml
backend/config/: settings.py
backend/weather/tests/unit/: test_date_range.py
frontend/: date.test.ts  package-lock.json  package.json
